--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="hero">
+		<div class="image">
+			<img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image" width=300px
+  height=200px;>
+		</div>
+
+		<div class="text">
+			<h1>Welcome to my Pinterest clone</h1>
+			<p>Discover new inspiration and save your favorite ideas</p>
+			<div class="button">
+			<button>Explore now</button>
+			</div>
+		</div>
+	</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
