--- a/main.html
+++ b/main.html
@@ -17,9 +17,9 @@
 		<div class="text">
 			<h1>Welcome to my Pinterest clone</h1>
 			<p>Discover new inspiration and save your favorite ideas</p>
-			<div class="button">
-			<button>Explore now</button>
-			</div>
+<!-- 			<div class="button"> -->
+			<button class="button">Explore now</button>
+<!-- 			</div> -->
 		</div>
 	</div>
 	
