--- a/main.html
+++ b/main.html
@@ -10,8 +10,7 @@
 	<!-- the entire body must be written by student -->
 	<div class="hero">
 		<div class="image">
-			<img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image" width=300px
-  height=200px;>
+			<img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image">
 		</div>
 
 		<div class="text">
